<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buscar_evento"
            android:icon="@drawable/ic_menu_buscar_evento"
            android:title="@string/menu_buscar_evento" />
        <item
            android:id="@+id/nav_cadastrar_evento"
            android:icon="@drawable/logo_evento_cadastrar"
            android:title="@string/menu_cadastrar_eventos" />
        <item
            android:id="@+id/nav_listar_evento"
            android:icon="@drawable/logo_evento_listar"
            android:title="@string/menu_listar_eventos" />
        <item
            android:id="@+id/nav_alterar_dados"
            android:icon="@drawable/logo_alterar_dados"
            android:title="@string/menu_alterar_dados" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_sair"
            android:title="@string/menu_sair" />
    </group>
</menu>
