<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fragment.BuscarEventoFragment">

        <TextView
            android:id="@+id/textViewTituloEventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/tituloCriarEvento"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNomeEvento"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/nomeEvento"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTituloEventos" />

        <EditText
            android:id="@+id/editTextDescricaoEvento"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:gravity="fill_horizontal"
            android:hint="@string/descricaoEvento"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeEvento"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeEvento" />

        <EditText
            android:id="@+id/editTextLogradouroEvento"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enderecoEventoLogradouro"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextDescricaoEvento"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescricaoEvento" />

        <EditText
            android:id="@+id/editTextNumeroEvento"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enderecoEventoNumero"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/editTextLogradouroEvento"
            app:layout_constraintTop_toBottomOf="@+id/editTextLogradouroEvento" />

        <EditText
            android:id="@+id/editTextBairroEvento"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enderecoEventoBairro"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextNumeroEvento"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumeroEvento" />

        <TextView
            android:id="@+id/textViewTituloTipoEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tituloTipoEventoCriar"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextBairroEvento"
            app:layout_constraintTop_toBottomOf="@+id/editTextBairroEvento" />

        <RadioGroup
            android:id="@+id/radioGroupTipoEventoCriar"
            android:layout_width="271dp"
            android:layout_height="95dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textViewTituloTipoEvento"
            app:layout_constraintTop_toBottomOf="@+id/textViewTituloTipoEvento">

            <RadioButton
                android:id="@+id/radioButtonTipo1Criar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_evento_1" />

            <RadioButton
                android:id="@+id/radioButtonTipo2Criar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_evento_2" />

            <RadioButton
                android:id="@+id/radioButtonTipo3Criar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_evento_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewCriarCidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tituloCidadeEventoCriar"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/radioGroupTipoEventoCriar"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTipoEventoCriar" />

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/ESTADOS"
            app:layout_constraintStart_toStartOf="@+id/textViewCriarCidade"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarCidade" />

        <Spinner
            android:id="@+id/spinnerMunicipio"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/AC"
            app:layout_constraintStart_toStartOf="@+id/spinnerEstado"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEstado" />

        <Spinner
            android:id="@+id/spinnerHora"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/HORAS"
            app:layout_constraintStart_toStartOf="@+id/textViewCriarHoraEventoSubtitulo"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarHoraEventoSubtitulo" />

        <Spinner
            android:id="@+id/spinnerMinutos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/MINUTOS"
            app:layout_constraintStart_toEndOf="@+id/spinnerHora"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarMinutosEventoSubtitulo" />

        <TextView
            android:id="@+id/textViewCriarHoraEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tituloHoraEventoCriar"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/spinnerMunicipio"
            app:layout_constraintTop_toBottomOf="@+id/spinnerMunicipio" />

        <TextView
            android:id="@+id/textViewCriarHoraEventoSubtitulo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/subtituloHoraEventoCriar"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewCriarHoraEvento"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarHoraEvento" />

        <TextView
            android:id="@+id/textViewCriarMinutosEventoSubtitulo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/subtituloMinutosEventoCriar"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textViewCriarHoraEventoSubtitulo"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarHoraEvento" />

        <TextView
            android:id="@+id/textViewCriarDataEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tituloDataEventoBuscar"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/spinnerHora"
            app:layout_constraintTop_toBottomOf="@+id/spinnerHora" />

        <CalendarView
            android:id="@+id/calendarViewDataEventoCriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarDataEvento" />

        <Button
            android:id="@+id/buttonImagemEventoCriar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/botao"
            android:text="@string/buttonImagemEvento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewDataEventoCriar" />

        <TextView
            android:id="@+id/textViewImagemEventoCriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/textViewImagemEvento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonImagemEventoCriar" />

        <Button
            android:id="@+id/buttonCriarEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/botao"
            android:text="@string/buttonCriarEvento"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCriarEventoVoltar"
            app:layout_constraintTop_toBottomOf="@+id/textViewImagemEventoCriar" />

        <Button
            android:id="@+id/buttonCriarEventoVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/botao"
            android:text="@string/buttonVoltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonCriarEvento"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewImagemEventoCriar" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>